--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="styles/homepage/services.css">
     <link rel="stylesheet" href="styles/homepage/reviews.css">
     <link rel="stylesheet" href="styles/homepage/cta.css">
+    <link rel="stylesheet" href="styles/homepage/team.css">
     <link rel="stylesheet" href="styles/global/footer.css">
     <link rel="stylesheet" href="styles/global/qoute.css">
     <link rel="stylesheet" href="styles/global/whatsapp.css">
@@ -100,39 +101,39 @@
           <div class="ser-grid">
             <div>
               <span>01</span>
-              <h2>Social Media Marketing</h2>
+              <h2>Web <br> Development</h2>
               <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptate?</p>
-              <a href=""><button class="my-btn3">Learn More...</button></a>
+              <a href="our_services.html#web_development"><button class="my-btn3">Learn More...</button></a>
             </div>
             <div>
-              <span>01</span>
-              <h2>Social Media Marketing</h2>
+              <span>02</span>
+              <h2>Content <br> Writing</h2>
               <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptate?</p>
-              <a href=""><button class="my-btn3">Learn More...</button></a>
+              <a href="our_services.html#content_writing"><button class="my-btn3">Learn More...</button></a>
             </div>
             <div>
-              <span>01</span>
-              <h2>Social Media Marketing</h2>
+              <span>03</span>
+              <h2>Lead Generation</h2>
               <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptate?</p>
-              <a href=""><button class="my-btn3">Learn More...</button></a>
+              <a href="our_services.html#lead_generation"><button class="my-btn3">Learn More...</button></a>
             </div>
             <div>
-              <span>01</span>
-              <h2>Social Media Marketing</h2>
+              <span>04</span>
+              <h2>Paid Ads</h2>
               <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptate?</p>
-              <a href=""><button class="my-btn3">Learn More...</button></a>
+              <a href="our_services.html#paid_ads"><button class="my-btn3">Learn More...</button></a>
             </div>
             <div>
-              <span>01</span>
-              <h2>Social Media Marketing</h2>
+              <span>05</span>
+              <h2>SEO </h2>
               <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptate?</p>
-              <a href=""><button class="my-btn3">Learn More...</button></a>
+              <a href="our_services.html#seo"><button class="my-btn3">Learn More...</button></a>
             </div>
             <div>
-              <span>01</span>
-              <h2>Social Media Marketing</h2>
+              <span>06</span>
+              <h2>Blog Setup</h2>
               <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptate?</p>
-              <a href=""><button class="my-btn3">Learn More...</button></a>
+              <a href="our_services.html#blog_setup"><button class="my-btn3">Learn More...</button></a>
             </div>
           </div>
         </div>
@@ -199,7 +200,69 @@
         <div class="team-cont">
           <div class="team-head">
             <h1>Meet The Team</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, id.</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Beatae,<br> tempora culpa doloribus nisi commodi et reiciendis voluptatum amet molestiae cum!</p>
+          </div>
+          <div class="team-grid">
+            <div class="member-box">
+              <div>
+                <img src="assestes/ahmadraza.png" alt="">
+              </div>
+              <div>
+                <h2>Ahmad Raza</h2>
+                <h3>Web Developler | SEO Expert</h3>
+                <a href=""><button class="my-btn3">Learn More</button></a>
+              </div>
+            </div>
+            <div class="member-box">
+              <div>
+                <img src="assestes/ahmadraza.png" alt="">
+              </div>
+              <div>
+                <h2>Ahmad Raza</h2>
+                <h3>Web Developler | SEO Expert</h3>
+                <a href=""><button class="my-btn3">Learn More</button></a>
+              </div>
+            </div>
+            <div class="member-box">
+              <div>
+                <img src="assestes/ahmadraza.png" alt="">
+              </div>
+              <div>
+                <h2>Ahmad Raza</h2>
+                <h3>Web Developler | SEO Expert</h3>
+                <a href=""><button class="my-btn3">Learn More</button></a>
+              </div>
+            </div>
+            <div class="member-box">
+              <div>
+                <img src="assestes/ahmadraza.png" alt="">
+              </div>
+              <div>
+                <h2>Ahmad Raza</h2>
+                <h3>Web Developler | SEO Expert</h3>
+                <a href=""><button class="my-btn3">Learn More</button></a>
+              </div>
+            </div>
+            <div class="member-box">
+              <div>
+                <img src="assestes/ahmadraza.png" alt="">
+              </div>
+              <div>
+                <h2>Ahmad Raza</h2>
+                <h3>Web Developler | SEO Expert</h3>
+                <a href=""><button class="my-btn3">Learn More</button></a>
+              </div>
+            </div>
+            <div class="member-box">
+              <div>
+                <img src="assestes/ahmadraza.png" alt="">
+              </div>
+              <div>
+                <h2>Ahmad Raza</h2>
+                <h3>Web Developler | SEO Expert</h3>
+                <a href=""><button class="my-btn3">Learn More</button></a>
+              </div>
+            </div>
           </div>
         </div>
       </section>
@@ -221,12 +284,13 @@
             <a href="index.html">BAW NexGen <br> Marketing</a>
             </div>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem praesentium exercitationem doloremque aut hic optio quis a id aliquid odit.</p>
-            <a href=""><img src="assestes/Vector (1).svg" alt=""></a>
-            <a href=""><img src="assestes/Vector (2).svg" alt=""></a>
-            <a href=""><img src="assestes/Vector.svg" alt=""></a>
-            <a href=""><img src="assestes/Vector (1).svg" alt=""></a>
-            <a href=""><img src="assestes/Vector (2).svg" alt=""></a>
-            <a href=""><img src="assestes/Vector.svg" alt=""></a>
+            <div class="footer-soc">
+              <a href=""><img src="assestes/Vector (1).svg" alt=""></a>
+              <a href=""><img src="assestes/Vector (2).svg" alt=""></a>
+              <a href=""><img src="assestes/Vector.svg" alt=""></a>
+              <a href=""><img src="assestes/Vector (2).svg" alt=""></a>
+              <a href=""><img src="assestes/Vector (1).svg" alt=""></a>
+            </div>
           </div>
           <div class="f-flex">
             <div class="footer-nav sec-line">
