--- a/contact_us.html
+++ b/contact_us.html
@@ -4,19 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact Us | BAW NexGen Marketing</title>
-    <link rel="stylesheet" href="styles/global/global.css">
-    <link rel="stylesheet" href="styles/global/header.css">
-    <link rel="stylesheet" href="styles/homepage/hero.css">
-    <link rel="stylesheet" href="styles/global/footer.css">
-    <link rel="stylesheet" href="styles/global/qoute.css">
-    <link rel="stylesheet" href="styles/global/whatsapp.css">
+    <link rel="stylesheet" href="styles/global/global.css" />
+    <link rel="stylesheet" href="styles/global/header.css" />
+    <link rel="stylesheet" href="styles/our services/hero.css" />
+    <link rel="stylesheet" href="styles/contact/contact.css" />
+    <link rel="stylesheet" href="styles/homepage/cta.css">
+    <link rel="stylesheet" href="styles/global/footer.css" />
+    <link rel="stylesheet" href="styles/global/qoute.css" />
+    <link rel="stylesheet" href="styles/global/whatsapp.css" />
   </head>
   <body>
     <!-- Header -->
     <header>
       <div class="header-cont">
         <div class="header-logo">
-          <a href=""><img src="assestes/BAW NexGen Marketing Logo.png" alt=""></a>
+          <a href=""
+            ><img src="assestes/BAW NexGen Marketing Logo.png" alt=""
+          /></a>
           <a href=""><span>BAW NexGen Marketing</span></a>
         </div>
         <div class="header-nav">
@@ -26,7 +30,9 @@
               <li><a href="our_services.html">Our Services</a></li>
               <li><a href="our_portfolio.html">Our Portfolio</a></li>
               <li><a href="about.html">About</a></li>
-              <li><a class="contact-btn" href="contact_us.html">Contact Us</a></li>
+              <li>
+                <a class="contact-btn" href="contact_us.html">Contact Us</a>
+              </li>
             </ul>
           </nav>
         </div>
@@ -44,9 +50,141 @@
         </nav>
       </div>
     </header>
-    <main></main>
+    <main>
+      <a
+        href="https://api.whatsapp.com/send?phone=923288984007"
+        target="_blank"
+      >
+        <div class="whatsapp">
+          <h3>GET A QOUTE</h3>
+          <img src="" alt="" />
+        </div>
+      </a>
+      <!-- hero section -->
+      <section>
+        <div class="hero-cont">
+          <h1>Hey Let's Do It</h1>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt
+            laboriosam expedita veniam in cumque! Repellat soluta cum totam quam
+            impedit.
+          </p>
+        </div>
+      </section>
+      <!-- Contact form -->
+      <section>
+        <div class="contact-cont">
+          <div class="form-cont">
+            <h1>Contact Via Email</h1>
+            <form action="method">
+              <input type="name" placeholder="Enter your name..." />
+              <input type="email" placeholder="Enter your email..." />
+              <textarea
+                name="messege"
+                id="messege"
+                cols="100"
+                rows="10"
+                placeholder="Enter your messege "
+              ></textarea>
+            </form>
+          </div>
+          <div class="whats-chat">
+            <h1>Chat With Us On WhatsApp</h1>
+            <a href=""><img src="assestes/whatsapp.svg" alt="" /></a>
+          </div>
+          <div class="social-contact">
+            <h1>Or Find Us On Social Media</h1>
+            <a href=""><img src="assestes/facebook.svg" alt="" /></a>
+            <a href=""><img src="assestes/linkedin.svg" alt="" /></a>
+            <a href=""><img src="assestes/instagram.svg" alt="" /></a>
+            <a href=""><img src="assestes/twitter.svg" alt="" /></a>
+          </div>
+        </div>
+      </section>
+      <!-- cta Section -->
+      <section>
+        <div class="cta-cont">
+          <h1>Write Your Success Story With Us</h1>
+        </div>
+      </section>
+    </main>
     <!-- Footer -->
-    <footer></footer>
+    <footer>
+      <div class="footer-cont">
+        <div class="footer-top">
+          <div class="footer-logo first-line">
+            <div class="logo-cont">
+              <a href="index.html"
+                ><img
+                  class="f-logo"
+                  src="assestes/BAW NexGen Marketing Logo.png"
+                  alt=""
+              /></a>
+              <a href="index.html"
+                >BAW NexGen <br />
+                Marketing</a
+              >
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem
+              praesentium exercitationem doloremque aut hic optio quis a id
+              aliquid odit.
+            </p>
+            <div class="footer-soc">
+              <a href=""><img src="assestes/facebook.svg" alt="" /></a>
+              <a href=""><img src="assestes/linkedin.svg" alt="" /></a>
+              <a href=""><img src="assestes/instagram.svg" alt="" /></a>
+              <a href=""><img src="assestes/twitter.svg" alt="" /></a>
+              <a href=""><img src="assestes/whatsapp.svg" alt="" /></a>
+            </div>
+          </div>
+          <div class="f-flex">
+            <div class="footer-nav sec-line">
+              <h1>Quick Links</h1>
+              <nav>
+                <ul>
+                  <li><a href="index.html">Home</a></li>
+                  <li><a href="our_services.html">Services</a></li>
+                  <li><a href="our_portfolio.html">Portfolio</a></li>
+                  <li><a href="about.html">About</a></li>
+                  <li><a class="active" href="contact_us.html">Contact</a></li>
+                </ul>
+              </nav>
+            </div>
+            <div class="footer-service sec-line">
+              <h1>Our Services</h1>
+              <nav>
+                <ul>
+                  <li><a href="">Web Development</a></li>
+                  <li><a href="">Paid Ads</a></li>
+                  <li><a href="">Content Writing</a></li>
+                  <li><a href="">SEO</a></li>
+                  <li><a href="">Bloging Setup</a></li>
+                  <li><a href="">Lead Generation</a></li>
+                </ul>
+              </nav>
+            </div>
+            <div class="footer-team sec-line">
+              <h1>Our Team</h1>
+              <nav>
+                <ul>
+                  <li><a href="">Muhammad Bilal</a></li>
+                  <li><a href="">Waqas Abbasi</a></li>
+                  <li><a href="">Ahmad Raza</a></li>
+                </ul>
+              </nav>
+            </div>
+          </div>
+        </div>
+        <hr />
+        <div class="footer-bottom">
+          <span
+            ><a href="">BAW NexGen Marketing</a> @ All Rights Reserved |
+            Developed by <a href="">Ahmad Raza</a></span
+          >
+        </div>
+      </div>
+    </footer>
     <script src="script.js"></script>
   </body>
 </html>
