--- a/our_services.html
+++ b/our_services.html
@@ -53,6 +53,12 @@
       </div>
     </header>
     <main>
+      <a href="https://api.whatsapp.com/send?phone=923288984007" target="_blank">
+        <div class="whatsapp">
+          <h3>GET A QOUTE</h3>
+          <img src="" alt="">
+        </div>
+      </a>
       <!-- hero section -->
       <section>
         <div class="hero-cont">
@@ -393,7 +399,7 @@
         <div class="serv-cont">
           <div class="head-cont">
             <span>05</span>
-            <h1>Search Engine Optimization(SEO)</h1>
+            <h1>SEO</h1>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste eum
               obcaecati aut veritatis! Sint, illum animi nam ullam temporibus
@@ -583,11 +589,11 @@
               aliquid odit.
             </p>
             <div class="footer-soc">
-              <a href=""><img src="assestes/Vector (1).svg" alt="" /></a>
-              <a href=""><img src="assestes/Vector (2).svg" alt="" /></a>
-              <a href=""><img src="assestes/Vector.svg" alt="" /></a>
-              <a href=""><img src="assestes/Vector (2).svg" alt="" /></a>
-              <a href=""><img src="assestes/Vector (1).svg" alt="" /></a>
+              <a href=""><img src="assestes/facebook.svg" alt="" /></a>
+              <a href=""><img src="assestes/linkedin.svg" alt="" /></a>
+              <a href=""><img src="assestes/instagram.svg" alt="" /></a>
+              <a href=""><img src="assestes/twitter.svg" alt="" /></a>
+              <a href=""><img src="assestes/whatsapp.svg" alt="" /></a>
             </div>
           </div>
           <div class="f-flex">
@@ -597,11 +603,11 @@
                 <ul>
                   <li><a href="index.html">Home</a></li>
                   <li>
-                    <a class="active" href="our_services.html">Our Services</a>
+                    <a class="active" href="our_services.html">Services</a>
                   </li>
-                  <li><a href="our_portfolio.html">Our Portfolio</a></li>
-                  <li><a href="about.html">About Us</a></li>
-                  <li><a href="contact_us.html">Contact Us</a></li>
+                  <li><a href="our_portfolio.html">Portfolio</a></li>
+                  <li><a href="about.html">About</a></li>
+                  <li><a href="contact_us.html">Contact</a></li>
                 </ul>
               </nav>
             </div>
@@ -640,5 +646,8 @@
       </div>
     </footer>
     <script src="script.js"></script>
+    <script src="animation/gsap.min.js"></script>
+    <script src="animation/ScrollTrigger.min.js"></script>
+    <script src="animation.js"></script>
   </body>
 </html>
