--- a/about.html
+++ b/about.html
@@ -4,19 +4,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About | BAW NexGen Marketing</title>
-    <link rel="stylesheet" href="styles/global/global.css">
-    <link rel="stylesheet" href="styles/global/header.css">
-    <link rel="stylesheet" href="styles/homepage/hero.css">
-    <link rel="stylesheet" href="styles/global/footer.css">
-    <link rel="stylesheet" href="styles/global/qoute.css">
-    <link rel="stylesheet" href="styles/global/whatsapp.css">
+    <link rel="stylesheet" href="styles/global/global.css" />
+    <link rel="stylesheet" href="styles/global/header.css" />
+    <link rel="stylesheet" href="styles/our services/hero.css" />
+    <link rel="stylesheet" href="styles/about/about.css">
+    <link rel="stylesheet" href="styles/global/footer.css" />
+    <link rel="stylesheet" href="styles/homepage/cta.css" />
+    <link rel="stylesheet" href="styles/global/whatsapp.css" />
   </head>
   <body>
     <!-- Header -->
     <header>
       <div class="header-cont">
         <div class="header-logo">
-          <a href=""><img src="assestes/BAW NexGen Marketing Logo.png" alt=""></a>
+          <a href=""
+            ><img src="assestes/BAW NexGen Marketing Logo.png" alt=""
+          /></a>
           <a href=""><span>BAW NexGen Marketing</span></a>
         </div>
         <div class="header-nav">
@@ -26,7 +29,9 @@
               <li><a href="our_services.html">Our Services</a></li>
               <li><a href="our_portfolio.html">Our Portfolio</a></li>
               <li><a class="active" href="about.html">About</a></li>
-              <li><a class="contact-btn" href="contact_us.html">Contact Us</a></li>
+              <li>
+                <a class="contact-btn" href="contact_us.html">Contact Us</a>
+              </li>
             </ul>
           </nav>
         </div>
@@ -44,9 +49,149 @@
         </nav>
       </div>
     </header>
-    <main></main>
+    <main>
+      <a
+        href="https://api.whatsapp.com/send?phone=923286415676"
+        target="_blank"
+      >
+        <div class="whatsapp">
+          <h3>GET A QOUTE</h3>
+          <img src="" alt="" />
+        </div>
+      </a>
+      <!-- hero section -->
+      <section>
+        <div class="hero-cont">
+          <h1>Learn About Us</h1>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt
+            laboriosam expedita veniam in cumque! Repellat soluta cum totam quam
+            impedit.
+          </p>
+        </div>
+      </section>
+      <section>
+        <div class="about-cont">
+          <h1>Welcome to BAW NexGen Marketing <br> <span>We Think Ahead of the Future in the Process of Your Success</span></h1>
+          <p>
+            Founded in 2023 by Ahmad Raza,
+            Waqas Abbasi, and Muhammad Bilal, BAW Next-Gen Marketing is a
+            leading digital marketing agency based in Multan, Pakistan. With a
+            relentless passion for digital excellence, we specialize in a
+            comprehensive range of digital marketing services tailored to
+            elevate your brand's online presence and drive tangible results. <br> <br> At
+            BAW Next-Gen Marketing, we pride ourselves on offering a diverse
+            array of services to meet all your digital needs under one roof.
+            From cutting-edge web development to compelling content writing,
+            robust SEO strategies to dynamic lead generation tactics, and
+            targeted paid advertising campaigns to engaging social media
+            marketing initiatives, we are your trusted partner for all things
+            digital. Our expertise spans across various industries, catering to
+            businesses of all sizes, from startups to established enterprises. <br> <br>
+            What sets us apart is our commitment to delivering personalized
+            solutions that align with your unique business objectives and
+            resonate with your target audience. Whether you're looking to
+            enhance your brand's visibility, drive qualified traffic to your
+            website, or boost conversions and sales, our team of seasoned
+            professionals is here to turn your digital dreams into reality. <br> <br> In
+            addition to our core services, we offer specialized packages, such
+            as our comprehensive blogging setup, designed to streamline your
+            content creation process and establish your brand as a thought
+            leader in your industry. With BAW Next-Gen Marketing by your
+            side, you can rest assured knowing that your digital presence is in
+            capable hands. <br> <br> Join forces with us today and embark on a journey
+            towards digital success. Let's elevate your brand to new heights
+            together with BAW Next-Gen Marketing.
+          </p>
+        </div>
+      </section>
+      <!-- cta Section -->
+      <section>
+        <div class="cta-cont">
+          <h1>Write Your Success Story With Us</h1>
+          <a href="contact_us.html"
+            ><button class="my-btn4">CONTACT NOW</button></a
+          >
+        </div>
+      </section>
+    </main>
     <!-- Footer -->
-    <footer></footer>
+    <footer>
+      <div class="footer-cont">
+        <div class="footer-top">
+          <div class="footer-logo first-line">
+            <div class="logo-cont">
+              <a href="index.html"
+                ><img
+                  class="f-logo"
+                  src="assestes/BAW NexGen Marketing Logo.png"
+                  alt=""
+              /></a>
+              <a href="index.html"
+                >BAW NexGen <br />
+                Marketing</a
+              >
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem
+              praesentium exercitationem doloremque aut hic optio quis a id
+              aliquid odit.
+            </p>
+            <div class="footer-soc">
+              <a href=""><img src="assestes/facebook.svg" alt="" /></a>
+              <a href=""><img src="assestes/linkedin.svg" alt="" /></a>
+              <a href=""><img src="assestes/instagram.svg" alt="" /></a>
+              <a href=""><img src="assestes/twitter.svg" alt="" /></a>
+              <a href=""><img src="assestes/whatsapp.svg" alt="" /></a>
+            </div>
+          </div>
+          <div class="f-flex">
+            <div class="footer-nav sec-line">
+              <h1>Quick Links</h1>
+              <nav>
+                <ul>
+                  <li><a href="index.html">Home</a></li>
+                  <li><a href="our_services.html">Services</a></li>
+                  <li><a href="our_portfolio.html">Portfolio</a></li>
+                  <li><a class="active" href="about.html">About</a></li>
+                  <li><a href="contact_us.html">Contact</a></li>
+                </ul>
+              </nav>
+            </div>
+            <div class="footer-service sec-line">
+              <h1>Our Services</h1>
+              <nav>
+                <ul>
+                  <li><a href="">Web Development</a></li>
+                  <li><a href="">Paid Ads</a></li>
+                  <li><a href="">Content Writing</a></li>
+                  <li><a href="">SEO</a></li>
+                  <li><a href="">Bloging Setup</a></li>
+                  <li><a href="">Lead Generation</a></li>
+                </ul>
+              </nav>
+            </div>
+            <div class="footer-team sec-line">
+              <h1>Our Team</h1>
+              <nav>
+                <ul>
+                  <li><a href="">Muhammad Bilal</a></li>
+                  <li><a href="">Waqas Abbasi</a></li>
+                  <li><a href="">Ahmad Raza</a></li>
+                </ul>
+              </nav>
+            </div>
+          </div>
+        </div>
+        <hr />
+        <div class="footer-bottom">
+          <span
+            ><a href="">BAW NexGen Marketing</a> @ All Rights Reserved |
+            Developed by <a href="">Ahmad Raza</a></span
+          >
+        </div>
+      </div>
+    </footer>
     <script src="script.js"></script>
   </body>
 </html>
